@@ -1,5 +1,10 @@
 2008-11-13  Michael Hutchinson  <mhutchinson@novell.com>
 
+	* MonoDevelop.Xml.StateEngine/XDom.cs: Avoid possible NRE in
+	ToUpper/ToLower.
+
+2008-11-13  Michael Hutchinson  <mhutchinson@novell.com>
+
 	* Makefile.am:
 	* MonoDevelop.XmlEditor.mdp: Updated.
 
